# ts2vec

./: pyproject.toml
src/ts2vec/: datautils.py  train.py  ts2vec.py
src/ts2vec/models/: losses.py
